# spacegame

./: .gitignore  .projectile  CMakeLists.txt  Makefile
src/: common.h  main.cpp  render.cpp  stdstub.cpp
src/game/: fpscamera.h
src/math/: mat4.h  math.h  quat.h  vec2.h  vec3.h  vec4.h
src/render/: bufferobject.cpp  bufferobject.h  defs.h  device.cpp  device.h  mesh.cpp  mesh.h  plyloader.cpp  plyloader.h  program.cpp  program.h  render.cpp  render.h  shader.cpp  shader.h  texture.cpp  texture.h  util.cpp  vertexformat.cpp  vertexformat.h
src/util/: arena.h  functors.h  hashtable.h  intrusive_hashtable.h  intrusive_link.h  intrusive_list.h  pair.h  podvector.h  refcounted.h
